--- a/config/config.yaml
+++ b/config/config.yaml
@@ -13,11 +13,14 @@ llm:
 embeddings:
   model_name: "all-MiniLM-L6-v2"
 
+clustering:
+  algorithm: "kmeans"
+  n_clusters: 15
+
 prompts:
-  version: 1
+  version: 2
   problem_extraction: |
-    You are an expert at analyzing customer issues. Your task is to identify problems described in the input text and return the results.
-    Analyze the following text and extract key problems.
+    You are an expert at analyzing customer issues. Your task is to identify problems described in the input text and return the result. Analyze the following text and extract key problem. Skip if this issue does not relate to problems with backup or restore.
     
     Customer case: {text}
     
@@ -25,30 +28,28 @@ prompts:
     {similar_cases}
     
     Instructions:
-    1. Identify specific problems
+    1. Identify specific backup or restor problem that issues was reported for
     2. Note severity (High/Medium/Low)
     3. List potential impact
     
-    Please return the extracted problems as a list in JSON format, like this:
-    [
-      {{
-        "Problem": "<problem description>", 
+    Please return the extracted problem as in JSON format, like this:
+    {{
+        "Problem": "<concise problem description>", 
         "Severity": "<level>", 
         "Impact": "<description>" 
       }}
-    ]
+
   problem_type: |
-    You are an expert in analyzing customer issues. Your task is to identify the type of problem described in the input text below. 
-    Based on the provided list of existing problem types, return your analysis as a concise single string stating just problem type without any additional explanations.
+    You are an expert in analyzing customer issues. Your task is to identify the type of problem described in the input text below and assign it to one of the existing problem types provided. Always prioritize reusing the most relevant problem type from the existing list. Only create a new problem type if the input text cannot reasonably fit into any of the existing problem types. Reuse from the existing list if possible, or a new problem type if absolutely necessary If creating a new problem type, ensure it is concise, clear, and stated as a single string without any additional explanations, use less then 60 characters.
 
     Input text:
     {text}
 
-    Initial list of problem types:
+    Existing list of problem types:
     {problem_types}
 
     Output:
-    {{Your identified problem type here}}
+    {{ provide identified problem type here, use 60 characters or less.}}
   problem_type_classification: |
     Given the description: 
     
@@ -58,7 +59,13 @@ prompts:
     {taxonomy}. 
     
     Provide a confidence level between 0-100.
+  generate_cluster_summary: |
+    You are an expert Product Manager specializing in customer issue analysis. Your task is to generate a single concise summary that synthesizes and captures the essence of the key issues described below.  Avoid listing individual problems; instead, combine them into one overarching and comprehensive statement. Make sure that summary returned is 100 words or less.
 
+    Descriptions of clustered problems: 
+    
+    {descriptions}
+   
 paths:
   taxonomy: "./config/taxonomy.yaml"
   templates: "./templates"
