--- a/backend/config/config.yaml
+++ b/backend/config/config.yaml
@@ -5,9 +5,10 @@ mongodb:
   processed_collection: "processed_data"
   results_collection: "results"
   projects_collection: "projects"
+  reports_collection: "reports"
 
 llm:
-  model_name: "llama3.2"  # Changed from llama3.2
+  model_name: "deepseek-r1:14b"  # Changed from llama3.2
   temperature: 0.1
   max_tokens: 2000
 
