--- a/web-interface/package.json
+++ b/web-interface/package.json
@@ -3,24 +3,25 @@
   "version": "1.0.0",
   "description": "A web interface for the existing project.",
   "main": "src/index.js",
-  "scripts": {    
+  "scripts": {
     "start": "export NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "react": "^18.0.2",
-    "react-dom": "^18.0.0",
-    "react-scripts": "4.0.3",
-    "react-router-dom": "^6.3.0",
     "axios": "^0.24.0",
-    "react-admin": "^4.0.0", 
-    "ra-data-simple-rest": "^4.0.0" 
+    "dompurify": "^3.2.3",
+    "ra-data-simple-rest": "^4.0.0",
+    "react": "^18.0.2",
+    "react-admin": "^4.0.0",
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "4.0.3"
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
-    "babel-eslint": "^10.1.0"
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.32.0"
   },
   "keywords": [],
   "author": "",
