--- a/web-interface/package.json
+++ b/web-interface/package.json
@@ -12,16 +12,20 @@
   "dependencies": {
     "axios": "^0.24.0",
     "dompurify": "^3.2.3",
+    "path-browserify": "^1.0.1",
     "ra-data-simple-rest": "^4.0.0",
     "react": "^18.0.2",
     "react-admin": "^4.0.0",
     "react-dom": "^18.0.0",
+    "react-markdown": "^8.0.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "remark-gfm": "^3.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.32.0"
+    "eslint": "^7.32.0",
+    "process": "0.11.10"
   },
   "keywords": [],
   "author": "",
@@ -39,4 +43,5 @@
     ]
   },
   "proxy": "http://localhost:4000"
+
 }
